[gd_scene load_steps=5 format=2]

[ext_resource path="res://orangefish.png" type="Texture" id=1]
[ext_resource path="res://goldfish.png" type="Texture" id=2]
[ext_resource path="res://purplefish.png" type="Texture" id=3]
[ext_resource path="res://inventory.gd" type="Script" id=4]

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Orangefish" type="Sprite" parent="."]
position = Vector2( 38, 36 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="OrangeCount" type="RichTextLabel" parent="Orangefish"]
margin_left = 34.0
margin_top = 15.0
margin_right = 74.0
margin_bottom = 55.0
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Purplefish" type="Sprite" parent="."]
position = Vector2( 122, 36 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="PurpleCount" type="RichTextLabel" parent="Purplefish"]
margin_left = 32.0
margin_top = 15.0
margin_right = 72.0
margin_bottom = 55.0
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Goldfish" type="Sprite" parent="."]
position = Vector2( 206, 36 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="GoldCount" type="RichTextLabel" parent="Goldfish"]
margin_left = 36.0
margin_top = 15.0
margin_right = 76.0
margin_bottom = 55.0
text = "0"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
